--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "d3": "~3.3.13",
-    "jquery": "~2.0.3",
-    "underscore": "~1.5.2",
+    "d3": "~3.4.2",
+    "jquery": "~2.1.0",
+    "lodash": "~2.4.1",
     "Duration.js": "https://github.com/icholy/Duration.js.git#3.3.3"
   },
   "devDependencies": {
