--- a/bower.json
+++ b/bower.json
@@ -1,27 +1,29 @@
 {
   "name": "tideline",
-  "version": "0.0.0",
+  "version": "0.0.8",
   "authors": [
     "Jana E. Beck <jana.eliz.beck@gmail.com>"
   ],
-  "description": "Refactor of Tidepool's timeline data visualization(s).",
+  "description": "Tidepool's timeline data visualization(s).",
   "license": "BSD",
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "example"
   ],
   "dependencies": {
-    "d3": "~3.4.2",
-    "jquery": "~2.1.0",
+    "d3": "~3.4.3",
+    "Duration.js": "https://github.com/icholy/Duration.js.git#3.3.3",
     "lodash": "~2.4.1",
-    "Duration.js": "https://github.com/icholy/Duration.js.git#3.3.3"
+    "crossfilter": "~1.3.7"
   },
   "devDependencies": {
+    "bootstrap": "~3.0.3",
     "bows": "https://github.com/latentflip/bows.git#beb35328d5c224fc5635928a1b45b32e0d839caa",
-    "bootstrap": "~3.0.3"
+    "jquery": "~2.1.0"
   }
 }
