--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "testem",
     "start": "BUILD_DEV=true webpack-dev-server -d --cache --colors --progress --content-base example --port 8081",
-    "build-test": "BUILD_DEV=true webpack './test/index.js' --output-path './tmp' --output-file '_test.js' --devtool eval-source-map",
+    "build-test": "BUILD_DEV=true webpack --config test.config.js",
     "jshint": "gulp jshint",
     "jshint-watch": "gulp jshint-watch"
   },
@@ -47,7 +47,7 @@
     "style-loader": "0.6.4",
     "testem": "0.6.18",
     "url-loader": "0.5.5",
-    "webpack": "1.3.3-beta1",
+    "webpack": "1.4.4",
     "webpack-dev-server": "1.4.7"
   }
 }
