--- a/_data/registry.yml
+++ b/_data/registry.yml
@@ -1,12 +1,5 @@
 [
   {
-    "title": "smbg means - scatterplot",
-    "href": "example/SMBGMean.html",
-    "branch": "SMBGMean",
-    "bundle": "SMBGMean.js",
-    "desc": "Modal day with basic scatterplot of smbg means for the brush area"
-  },
-  {
     "desc": "Modal day with bar graph of smbg means for the brush area",
     "href": "example/SMBGMeanBars.html",
     "bundle": "SMBGMeanBars.js",
@@ -15,9 +8,9 @@
   },
   {
     "title": "smbg means - colormap",
-    "href": "example/SMBGMeanHeat.html",
-    "branch": "SMBGMeanHeat",
-    "bundle": "SMBGMeanHeat.js",
+    "href": "example/SMBGMeanColormap.html",
+    "branch": "SMBGMeanColormap",
+    "bundle": "SMBGMeanColormap.js",
     "desc": "Modal day with color map of smbg means for the brush area"
   },
   {
@@ -28,17 +21,45 @@
     "title": "smbg - low-mean-high boxes"
   },
   {
-    "title": "30 days data",
+    "title": "smbg - low-mean-high boxes, 180 days data",
     "href": "example/SMBGBox2.html",
     "branch": "SMBGBox2",
     "bundle": "SMBGBox2.js",
-    "desc": "Modal day with pseudo-boxplot of smbg low, mean, high for the brush area"
+    "desc": "Modal day with pseudo-boxplot of smbg low, mean, high for the brush area, 180 days data total"
   },
   {
-    "href": "example/stats-explainer-tooltips.html",
+    "title": "without stats widget",
+    "href": "example/no-stats.html",
+    "branch": "no-stats",
+    "bundle": "no-stats.js",
+    "desc": "Modal day without stats widget"
+  },
+  {
+    "desc": "Modal day with dashed lines connecting smbgs instead of solid",
+    "href": "example/dashed-lines.html",
+    "bundle": "dashed-lines.js",
+    "branch": "dashed-lines",
+    "title": "dashed lines"
+  },
+  {
+    "title": "smaller 2-o elements",
+    "href": "example/minify.html",
+    "branch": "minify",
+    "bundle": "minify.js",
+    "desc": "Modal day with scaled down stats widget and brush"
+  },
+  {
+    "href": "example/monochrome-stats-and-brush.html",
+    "desc": "Modal day with stats widget and brush monochrome instead of color",
+    "bundle": "monochrome-stats-and-brush.js",
+    "branch": "monochrome-stats-and-brush",
+    "title": "2-o elements monochrome"
+  },
+  {
     "desc": "New explainer tooltips for stats widget describing how each statistic is calculated",
+    "href": "example/stats-explainer-tooltips.html",
     "bundle": "stats-explainer-tooltips.js",
     "branch": "stats-explainer-tooltips",
-    "title": "Stats explainers"
+    "title": "stats explainers"
   }
 ]
