--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "0.0.59",
+  "version": "0.0.59-hotfix",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
