--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "0.5.17",
+  "version": "0.5.18-alpha",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
