--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sundial": "1.5.0"
   },
   "devDependencies": {
-    "autoprefixer-loader": "3.2.0",
+    "autoprefixer": "6.7.2",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.5",
     "babel-plugin-rewire": "1.0.0-rc-6",
@@ -58,6 +58,7 @@
     "less-loader": "2.2.3",
     "mocha": "3.0.2",
     "phantomjs-prebuilt": "2.1.12",
+    "postcss-loader": "1.3.0",
     "react": "15.2.1",
     "react-addons-pure-render-mixin": "15.2.1",
     "react-addons-test-utils": "15.2.1",
