--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "0.7.2-automated-basal.6",
+  "version": "0.8.0-600-series-beta.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
