--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.14.0",
+  "version": "1.15.0-lodash-and-annotation.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
