--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "license": "BSD-2-Clause",
   "scripts": {
     "test": "TZ=UTC NODE_ENV=test ./node_modules/karma/bin/karma start",
-    "pretest": "NODE_ENV=test npm run lint",
-    "browser-tests": "./node_modules/karma/bin/karma start --browsers Chrome",
+    "browser-tests": "./node_modules/karma/bin/karma start --no-single-run --browsers Chrome",
     "test-watch": "TZ=UTC NODE_ENV=test ./node_modules/karma/bin/karma start --no-single-run --reporters=mocha",
     "start": "BUILD_DEV=true webpack-dev-server -d --cache --colors --progress --content-base example --port 8081",
-    "lint": "gulp jshint",
-    "lint-watch": "gulp jshint-watch"
+    "lint": "gulp eslint",
+    "lint-watch": "gulp eslint-watch"
   },
   "dependencies": {
     "bows": "1.7.0",
@@ -28,15 +27,15 @@
     "intl": "1.2.5",
     "lodash": "4.17.15",
     "moment-timezone": "0.5.21",
-    "react": "15.6.2",
-    "react-addons-pure-render-mixin": "15.6.2",
-    "react-dom": "15.6.2",
-    "react-sizeme": "2.5.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-sizeme": "2.6.12",
     "sundial": "1.6.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.2.0",
     "babel-core": "6.13.2",
+    "babel-eslint": "10.0.3",
     "babel-loader": "6.2.5",
     "babel-plugin-rewire": "1.0.0-rc-6",
     "babel-preset-es2015": "6.13.2",
@@ -45,13 +44,24 @@
     "babel-preset-stage-2": "6.13.0",
     "chai": "3.5.0",
     "chromedriver": "2.41.0",
+    "create-react-class": "15.6.3",
     "css-loader": "0.23.1",
-    "enzyme": "2.9.1",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-lodash": "6.0.0",
+    "eslint-plugin-mocha": "6.2.2",
+    "eslint-plugin-react": "7.17.0",
     "file-loader": "0.9.0",
     "gulp": "3.9.1",
+    "gulp-babel": "7",
+    "gulp-eslint": "6.0.0",
     "gulp-jshint": "2.1.0",
-    "gulp-react": "3.1.0",
-    "jshint": "2.10.3",
+    "gulp-react": "4.0.0",
+    "jshint": "2.11.0",
     "jshint-stylish": "2.2.1",
     "json-loader": "0.5.4",
     "karma": "1.2.0",
@@ -66,7 +76,7 @@
     "less": "2.7.1",
     "less-loader": "2.2.3",
     "mocha": "3.0.2",
-    "react-addons-test-utils": "15.6.2",
+    "prop-types": "15.7.2",
     "rewire": "2.5.2",
     "rewire-webpack": "1.0.1",
     "script-loader": "0.7.0",
