reset formatting, debugging

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "BSD-2-Clause",
   "scripts": {
     "test": "TZ=UTC NODE_ENV=test ./node_modules/karma/bin/karma start",
-    "browser-tests": "./node_modules/karma/bin/karma start --no-single-run --browsers Chrome",
+    "pretest": "NODE_ENV=test npm run lint",
+    "browser-tests": "./node_modules/karma/bin/karma start --browsers Chrome",
     "test-watch": "TZ=UTC NODE_ENV=test ./node_modules/karma/bin/karma start --no-single-run --reporters=mocha",
     "start": "BUILD_DEV=true webpack-dev-server -d --cache --colors --progress --content-base example --port 8081",
     "lint": "gulp eslint",
