--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sundial": "1.6.0"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "16.11.0",
     "autoprefixer-loader": "3.2.0",
     "babel-core": "6.13.2",
     "babel-eslint": "10.0.3",
