--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.20.0-web-54-basics-date-range-selection.3",
+  "version": "1.20.0-rc.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
