--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.23.0-web-717-carb-exchanges.1",
+  "version": "1.23.0-rc.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
