--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.24.0-control-iq.4",
+  "version": "1.24.0-rc.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
