--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.24.0-rc.2",
+  "version": "1.24.0",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
