[WEB-880] v1.25.0-web-880-clinic-signup.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.24.0",
+  "version": "1.25.0-web-880-clinic-signup.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
