--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
   "presets": [
-    "es2015",
-    "stage-0",
-    "stage-2",
-    "react"
+    "@babel/preset-env",
+    "@babel/preset-react",
+    "babel-preset-react-app"
   ]
 }
