--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.25.0",
+  "version": "1.26.0-web-49-basics-basal-iq-auto-suspends.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
