--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.26.0-web-1457-move-data-view-controls.1",
+  "version": "1.26.0-rc.2",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
