Package and build config updates to remove npm audit violations

--- a/package.json
+++ b/package.json
@@ -13,85 +13,82 @@
     "pretest": "NODE_ENV=test npm run lint",
     "browser-tests": "./node_modules/karma/bin/karma start --browsers Chrome",
     "test-watch": "TZ=UTC NODE_ENV=test ./node_modules/karma/bin/karma start --no-single-run --reporters=mocha",
-    "lint": "gulp eslint",
-    "lint-watch": "gulp eslint-watch"
+    "lint": "NODE_ENV=test ./node_modules/.bin/eslint js/ plugins/ test/ *.js"
   },
   "dependencies": {
-    "bows": "1.7.0",
-    "classnames": "2.2.6",
+    "bows": "1.7.2",
+    "classnames": "2.3.2",
     "crossfilter": "1.3.12",
     "d3": "3.5.17",
     "d3.chart": "0.3.0",
     "duration-js": "4.0.0",
-    "i18next": "11.9.0",
+    "i18next": "23.5.1",
     "intl": "1.2.5",
-    "lodash": "4.17.15",
-    "moment-timezone": "0.5.21",
+    "lodash": "4.17.21",
+    "moment-timezone": "0.5.43",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-sizeme": "2.6.12",
-    "sundial": "1.6.0"
+    "sundial": "1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "7.11.4",
-    "@babel/preset-env": "7.11.0",
-    "@babel/preset-react": "7.10.4",
+    "@babel/cli": "7.23.0",
+    "@babel/core": "7.23.0",
+    "@babel/plugin-proposal-class-properties": "7.21.4-esm.4",
+    "@babel/polyfill": "7.12.1",
+    "@babel/preset-env": "7.22.20",
+    "@babel/preset-react": "7.22.15",
+    "@babel/runtime": "7.23.1",
     "@hot-loader/react-dom": "16.11.0",
-    "autoprefixer-loader": "3.2.0",
+    "autoprefixer": "10.4.16",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.3",
-    "babel-loader": "8.0.2",
+    "babel-eslint": "9.0.0",
+    "babel-loader": "9.1.3",
+    "babel-plugin-istanbul": "6.1.1",
     "babel-plugin-rewire": "1.2.0",
-    "babel-preset-react-app": "4.0.0-next.2150693d",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-preset-stage-2": "6.13.0",
-    "chai": "3.5.0",
-    "chromedriver": "2.41.0",
-    "create-react-class": "15.6.3",
-    "css-loader": "0.23.1",
+    "babel-preset-react-app": "10.0.1",
+    "chai": "4.3.10",
+    "chromedriver": "116.0.0",
+    "create-react-class": "15.7.0",
+    "css-loader": "6.8.1",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "eslint": "6.8.0",
+    "enzyme-adapter-react-16": "1.15.7",
+    "eslint": "8.50.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-import": "2.20.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-lodash": "6.0.0",
     "eslint-plugin-mocha": "6.2.2",
     "eslint-plugin-react": "7.17.0",
-    "file-loader": "0.9.0",
-    "gulp": "3.9.1",
-    "gulp-babel": "7",
-    "gulp-eslint": "6.0.0",
-    "gulp-jshint": "2.1.0",
-    "gulp-react": "4.0.0",
-    "jshint": "2.11.0",
+    "file-loader": "6.2.0",
+    "intl-pluralrules": "2.0.1",
+    "jshint": "2.13.6",
     "jshint-stylish": "2.2.1",
-    "json-loader": "0.5.4",
-    "karma": "1.2.0",
+    "json-loader": "0.5.7",
+    "karma": "6.3.16",
     "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "2.2.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.2.1",
     "karma-intl-shim": "1.0.3",
-    "karma-mocha": "1.1.1",
-    "karma-mocha-reporter": "2.1.0",
+    "karma-mocha": "2.0.1",
+    "karma-mocha-reporter": "2.2.5",
     "karma-sinon": "1.0.5",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.8.0",
-    "less": "2.7.1",
-    "less-loader": "2.2.3",
-    "mocha": "3.0.2",
+    "karma-sourcemap-loader": "0.4.0",
+    "karma-webpack": "5.0.0",
+    "less": "4.2.0",
+    "less-loader": "11.1.3",
+    "mocha": "10.2.0",
+    "node-polyfill-webpack-plugin": "2.0.1",
     "prop-types": "15.7.2",
-    "rewire": "2.5.2",
-    "rewire-webpack": "1.0.1",
-    "script-loader": "0.7.0",
-    "sinon": "1.17.5",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.2"
+    "rewire": "7.0.0",
+    "script-loader": "0.7.2",
+    "sinon": "16.1.0",
+    "style-loader": "3.3.3",
+    "url-loader": "4.1.1",
+    "webpack": "5.88.2"
   },
   "peerDependencies": {
-    "babel-core": "6.x || 7.0.0-bridge.0"
-  },
-  "resolutions": {
-    "sundial/moment-timezone": "0.5.21"
+    "babel-core": "6.x || 7.0.0-bridge.0",
+    "lodash": "4.17.x"
   }
 }
