--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "1.27.0",
+  "version": "1.28.0-web-2595-critical-depandancy-updates.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
