Additional package updates

--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "bows": "1.7.2",
     "classnames": "2.3.2",
     "crossfilter": "1.3.12",
-    "d3": "3.5.17",
-    "d3.chart": "0.3.0",
+    "d3": "7.8.5",
     "duration-js": "4.0.0",
     "i18next": "23.5.1",
     "intl": "1.2.5",
     "lodash": "4.17.21",
     "moment-timezone": "0.5.43",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-sizeme": "2.6.12",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-sizeme": "3.0.2",
     "sundial": "1.7.1"
   },
   "devDependencies": {
     "@babel/cli": "7.23.0",
     "@babel/core": "7.23.0",
     "@babel/plugin-proposal-class-properties": "7.21.4-esm.4",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.22.20",
     "@babel/preset-react": "7.22.15",
