--- a/package.json
+++ b/package.json
@@ -59,13 +59,14 @@
     "css-loader": "6.8.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.7",
-    "eslint": "8.50.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-lodash": "6.0.0",
+    "eslint": "8.51.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-lodash": "7.4.0",
     "eslint-plugin-mocha": "6.2.2",
-    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-moment-utc": "1.0.0",
+    "eslint-plugin-react": "7.33.2",
     "file-loader": "6.2.0",
     "intl-pluralrules": "2.0.1",
     "jshint": "2.13.6",
