--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 
 language: node_js
 
-dist: trusty
+dist: jammy
 
 node_js:
   - "20.8.0"
@@ -15,9 +15,11 @@ cache:
 
 before_install:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - corepack enable
+  - yarn set version 3.6.4
 
 install:
-  - yarn install --frozen-lockfile
+  - yarn install --immutable
 
 script:
   - "npm test"
