--- a/package.json
+++ b/package.json
@@ -96,6 +96,6 @@
   },
   "peerDependencies": {
     "babel-core": "6.x || 7.0.0-bridge.0",
-    "lodash": "4.17.x"
+    "lodash": "^4.17.21"
   }
 }
