--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bows": "1.7.2",
     "classnames": "2.3.2",
     "crossfilter": "1.3.12",
-    "d3": "7.8.5",
+    "d3": "3.5.17",
+    "d3.chart": "0.3.0",
     "duration-js": "4.0.0",
     "i18next": "23.6.0",
     "intl": "1.2.5",
