Small tweak to yarn .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ web/
 wiki/
 package-lock.json
 
-# yarn
+# yarn (ref https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored)
+.pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
