Ensure tests ending with ".test" also included in test runs

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ tmp/
 web/
 wiki/
 package-lock.json
+coverage/
 
 # yarn (ref https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored)
 .pnp.*
