--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "20.8.0"
   },
   "packageManager": "yarn@3.6.4",
-  "version": "1.28.0-web-2595-critical-depandancy-updates.3",
+  "version": "1.28.0",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
