--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "20.8.0"
   },
   "packageManager": "yarn@3.6.4",
-  "version": "1.29.0",
+  "version": "1.30.0-web-3005-web-3306-web-3007-web-3008-loop-stats.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
