Remove nodejs stable job from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
-sudo: false
-
-language: node_js
-
+os: linux
 dist: jammy
+language: node_js
 
 node_js:
   - "20.8.0"
-  - "stable"
 
 cache:
   yarn: true
@@ -23,7 +20,3 @@ install:
 
 script:
   - "npm test"
-
-matrix:
-  allow_failures:
-    - node_js: "stable"
