--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "crossfilter": "1.3.12",
     "d3": "3.5.17",
     "d3.chart": "0.3.0",
+    "dompurify": "3.2.5",
     "duration-js": "4.0.0",
     "i18next": "23.6.0",
     "intl": "1.2.5",
