Attempt CI fix: 6

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,16 @@ language: node_js
 node_js:
   - "20.8.0"
 
+addons:
+  chrome: stable
+
 cache:
   yarn: true
   directories:
     - node_modules
 
 before_install:
-  - google-chrome-stable --no-sandbox
+  # - google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222 http://localhost &
   - corepack enable
   - yarn set version 3.6.4
 
