--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
   - "20.8.0"
 
 addons:
-  chrome: stable
+  chrome: beta
 
 cache:
   yarn: true
@@ -14,7 +14,7 @@ cache:
     - node_modules
 
 before_install:
-  # - google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222 http://localhost &
+  - google-chrome-beta --headless --no-sandbox --remote-debugging-port=9222 http://localhost &
   - corepack enable
   - yarn set version 3.6.4
 
