--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "main": "js/index.js",
   "license": "BSD-2-Clause",
   "scripts": {
-    "test": "TZ=UTC NODE_ENV=test yarn karma start",
+    "test": "TZ=UTC NODE_ENV=test WEBPACK_DEBUG=true DEBUG=* yarn karma start --log-level debug",
+    "test-super-verbose": "TZ=UTC NODE_ENV=test WEBPACK_DEBUG=true DEBUG=* yarn karma start --log-level debug",
+    "test-webpack-debug": "TZ=UTC NODE_ENV=test WEBPACK_DEBUG=true DEBUG=webpack:* yarn karma start --log-level debug --karma-debug",
+    "test-webpack-profile": "TZ=UTC NODE_ENV=test WEBPACK_DEBUG=true DEBUG=webpack:* NODE_OPTIONS='--max-old-space-size=4096' yarn karma start --log-level debug --karma-debug",
+    "test-progress": "TZ=UTC NODE_ENV=test WEBPACK_DEBUG=true yarn karma start",
     "pretest": "NODE_ENV=test npm run lint",
     "browser-tests": "yarn karma start --browsers Chrome",
     "test-watch": "TZ=UTC NODE_ENV=test yarn karma start --no-single-run --reporters=mocha",
+    "test-verbose": "TZ=UTC NODE_ENV=test WEBPACK_DEBUG=true yarn karma start --log-level debug",
+    "test-debug": "TZ=UTC NODE_ENV=test WEBPACK_DEBUG=true NODE_OPTIONS='--inspect-brk' yarn karma start --log-level debug",
     "lint": "NODE_ENV=test yarn eslint js/ plugins/ test/ *.js"
   },
   "dependencies": {
@@ -86,13 +92,16 @@
     "less-loader": "11.1.3",
     "mocha": "10.2.0",
     "node-polyfill-webpack-plugin": "2.0.1",
+    "progress-webpack-plugin": "1.0.16",
     "prop-types": "15.7.2",
     "rewire": "7.0.0",
     "script-loader": "0.7.2",
     "sinon": "17.0.0",
     "style-loader": "3.3.3",
     "url-loader": "4.1.1",
-    "webpack": "5.89.0"
+    "webpack": "5.89.0",
+    "webpack-bundle-analyzer": "4.10.2",
+    "webpack-cli": "6.0.1"
   },
   "peerDependencies": {
     "babel-core": "6.x || 7.0.0-bridge.0",
