--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
     - node_modules
 
 before_install:
-  - google-chrome-stable --headless --no-sandbox --ignore-gpu-blocklist --remote-debugging-port=9222 http://localhost &
+  - google-chrome-stable --headless --disable_gpu --remote-debugging-port=9222 http://localhost &
   - corepack enable
   - yarn set version 3.6.4
 
