--- a/package.json
+++ b/package.json
@@ -87,13 +87,16 @@
     "less-loader": "11.1.3",
     "mocha": "10.2.0",
     "node-polyfill-webpack-plugin": "2.0.1",
+    "progress-webpack-plugin": "1.0.16",
     "prop-types": "15.7.2",
     "rewire": "7.0.0",
     "script-loader": "0.7.2",
     "sinon": "17.0.0",
     "style-loader": "3.3.3",
     "url-loader": "4.1.1",
-    "webpack": "5.89.0"
+    "webpack": "5.89.0",
+    "webpack-bundle-analyzer": "4.10.2",
+    "webpack-cli": "6.0.1"
   },
   "peerDependencies": {
     "babel-core": "6.x || 7.0.0-bridge.0",
