--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,13 @@ language: node_js
 node_js:
   - "20.8.0"
 
-addons:
-  chrome: stable
-
 cache:
   yarn: true
   directories:
     - node_modules
 
 before_install:
-  - google-chrome-stable --headless --disable_gpu --remote-debugging-port=9222 http://localhost &
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - corepack enable
   - yarn set version 3.6.4
 
