--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ cache:
     - node_modules
 
 before_install:
-  - google-chrome-stable --headless --remote-debugging-port=9220 http://localhost
   - corepack enable
   - yarn set version 3.6.4
 
@@ -19,4 +18,5 @@ install:
   - yarn install --immutable
 
 script:
+  - google-chrome-stable --headless --disable-renderer-backgrounding --remote-debugging-port=9222 http://localhost &
   - "npm test"
