--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "engines": {
     "node": "20.8.0"
   },
-  "packageManager": "yarn@3.6.4
+  "packageManager": "yarn@3.6.4",
   "version": "1.32.1-web-3698-dosing-decision-bolus-normal",
   "description": "Tidepool's timeline data visualization",
   "repository": {
