--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "20.8.0"
   },
   "packageManager": "yarn@3.6.4",
-  "version": "1.32.1-web-3698-dosing-decision-bolus-normal",
+  "version": "1.33.0-rc.1",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
