--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "20.8.0"
   },
   "packageManager": "yarn@3.6.4",
-  "version": "1.35.0",
+  "version": "1.36.0-develop",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
