--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-sizeme": "3.0.2",
-    "sundial": "1.7.1"
+    "sundial": "1.7.6-rc.1"
   },
   "devDependencies": {
     "@babel/cli": "7.23.0",
